<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpaceApps</string>
    <string name="action_retry">Retry</string>
    <string name="back">Back</string>

    <string name="rocket_image_description">Photo of rocket %1$s</string>
    <string name="status_active">Active</string>
    <string name="status_retired">Retired</string>

    <string name="stat_height">Height</string>
    <string name="stat_mass">Mass</string>
    <string name="stat_first_flight">First Flight</string>
    <string name="cost_per_launch">%1$dM per launch</string>
    <string name="view_details">View Details</string>

    <string name="home_title">Rocket Catalog</string>
    <string name="search_rocket_placeholder">Search rocket by name</string>
    <string name="button_logout">Log Out</string>
    <string name="empty_results_message">No results</string>

    <string name="login_title">Log In</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="button_forgot_password">Forgot my login details</string>
    <string name="button_login">Log In</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_short_password">Minimum 8 characters</string>
    <string name="error_invalid_credentials">Invalid credentials. Please try again.</string>

    <string name="rocket_detail_title">Details</string>
    <string name="label_description">Description</string>
    <string name="data_first_flight">First flight date</string>
    <string name="data_height">Total height</string>
    <string name="data_mass">Total mass</string>
    <string name="data_cost_per_launch">Cost per launch</string>
    <string name="data_active_status">Status</string>
    <string name="button_more_info_wikipedia">More info (Wikipedia)</string>
    <string name="error_rocket_not_found">Rocket not found</string>

</resources>
