...
                Spacer(modifier = Modifier.height(20.dp))

                // Hero
                Column(modifier = Modifier.padding(bottom = 20.dp)) {
                    Box {
                        Text(
                            text = "Explore Rockets",
                            color = colors.textPrimary,
                            fontSize = 34.sp,
                            style = MaterialTheme.typography.headlineLarge
                        )
                    }
                    Spacer(modifier = Modifier.height(6.dp))
...
